[gd_scene load_steps=3 format=3 uid="uid://dcy1lcjf3fdfh"]

[ext_resource type="Script" uid="uid://wuyfy5a4w2aq" path="res://scenes/views/backyard/shooting_area.gd" id="1_xus26"]

[sub_resource type="RectangleShape2D" id="RectangleShape2D_0xm2m"]
size = Vector2(864, 552)

[node name="ShootingArea" type="Area2D"]
script = ExtResource("1_xus26")

[node name="CollisionShape2D" type="CollisionShape2D" parent="."]
shape = SubResource("RectangleShape2D_0xm2m")

[node name="ShootCooldown" type="Timer" parent="."]
wait_time = 0.2

[connection signal="mouse_entered" from="." to="." method="_on_mouse_entered"]
[connection signal="mouse_exited" from="." to="." method="_on_mouse_exited"]
[connection signal="timeout" from="ShootCooldown" to="." method="_on_timer_timeout"]
